--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,11 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-body { 
-    min-height: 100vh; 
-    background-color: rgb(42,48,60);
+body {
+  min-height: 100vh;
+  background-color: rgb(42, 48, 60);
 }
 #__next {
-    min-height: 100vh;
+  min-height: 100vh;
 }
-
